--- a/index.html
+++ b/index.html
@@ -2,16 +2,75 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <title>Monk's Cafe</title>
-    <link rel="stylesheet" href="main.css">
+	<meta charset="UTF-8">
+	<title>Monk's Cafe</title>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,900,900i" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-   <h1>Hello World!</h1>
+	<header>
+		<h1>Monk's Cafe</h1>
+	 	<h2>"The Coffee Shop"</h2>
+	</header>
+
+	<div id="extPhoto">
+	</div>
+
+	<section>
+		<h2>Make a Reservation</h2>
+		<form>
+			<h3>Make a Reservation</h3>
+			<span>Name</span>
+    		<input type="text" placeholder="Name">
+    		<br>
+			<span>Day</span>
+    		<input type="text" placeholder="Day">
+    		<br>
+    		<button type="submit">Confirm</button>
+		</form>
+
+		<aside>
+			<h3>Existing Reservations</h3>
+			<table>
+				<thead>
+					<th>Name</th>
+					<th>Day</th>
+				</thead>
+				<tr>
+    				<td>Placeholder Name</td>
+    				<td>Placeholder Day</td> 
+  				</tr>
+				<tbody>
+					
+				</tbody>
+			</table>
+		</aside>
+	</section>
+	<section>
+		<h2>Come Dine with Us</h2>
+		<div id="map"></div>
+	</section>
+
+	<section>
+		<h2>Customer Reviews</h2>
+		<img src="img/jerry.jpg" alt="jerry">
+		<p>“Big lettuce, big carrots, tomatoes like volleyballs.”</p>
+		<p>— Jerry Seinfeld, on The BIG Salad</p>
+	</section>
+
+	<footer>
+	<p>Monk's Cafe</p>
+	<p>2880 Broadway, New York, NY 10025</p> 
+	<p>212.867.5309</p>
+	</footer>
+
 </body>
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/main.js"></script>
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVubF6n38O6Y_FBURmAvfDFI1qAZSZU5Q&callback=initMap" async defer></script>
 
 </html>
