--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-	<header>
-		<h1>Monk's Cafe</h1>
-	 	<h2>"The Coffee Shop"</h2>
+	<header id="extPhoto">
+		<div class="center-content">
+			<h1>Monk's Cafe</h1>
+	 		<p>"The Coffee Shop"</p>
+	 	</div>
 	</header>
-
-	<div id="extPhoto">
-	</div>
 
 	<section>
 		<h2>Make a Reservation</h2>
@@ -24,10 +23,8 @@
 			<h3>Make a Reservation</h3>
 			<span>Name</span>
     		<input type="text" placeholder="Name">
-    		<br>
 			<span>Day</span>
     		<input type="text" placeholder="Day">
-    		<br>
     		<button type="submit">Confirm</button>
 		</form>
 
@@ -48,6 +45,7 @@
 			</table>
 		</aside>
 	</section>
+
 	<section>
 		<h2>Come Dine with Us</h2>
 		<div id="map"></div>
@@ -55,15 +53,17 @@
 
 	<section>
 		<h2>Customer Reviews</h2>
-		<img src="img/jerry.jpg" alt="jerry">
-		<p>“Big lettuce, big carrots, tomatoes like volleyballs.”</p>
-		<p>— Jerry Seinfeld, on The BIG Salad</p>
+		<img id="jerryImg" src="img/jerry.jpg" alt="jerry">
+		<div id="jerryQuote">
+			<p>“Big lettuce, big carrots, tomatoes like volleyballs.”</p>
+			<p>— Jerry Seinfeld, on The BIG Salad</p>
+		</div>
 	</section>
 
 	<footer>
-	<p>Monk's Cafe</p>
-	<p>2880 Broadway, New York, NY 10025</p> 
-	<p>212.867.5309</p>
+		<p>Monk's Cafe</p>
+		<p>2880 Broadway, New York, NY 10025</p> 
+		<p>212.867.5309</p>
 	</footer>
 
 </body>
