--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Monk's Cafe</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,900,900i" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -12,63 +13,81 @@
 <body>
 	<header id="extPhoto">
 		<div class="center-content">
-			<h1>Monk's Cafe</h1>
-	 		<p>"The Coffee Shop"</p>
+			<h1>b. patisserie</h1>
+			<p>A Modern French Cafe</p>
 	 	</div>
 	</header>
 
 	<section>
-		<h2>Make a Reservation</h2>
-		<form>
-			<h3>Make a Reservation</h3>
-			<span>Name</span>
-    		<input type="text" placeholder="Name">
-			<span>Day</span>
-    		<input type="text" placeholder="Day">
-    		<button type="submit">Confirm</button>
-		</form>
+		<aside id="images">
+			<img src="img/olenka-kotyk-15382.jpg">
+			<img src="img/jennifer-pallian-173716.jpg">
+		</aside>
+		<div id="content">
+			<h2>Our Story</h2>
+			<p>Our vision is to bring San Francisco a refined, yet modern, salon de thé with an open pastry kitchen, showcasing the combination of Belinda Leong’s talent with Michel Suas’s knowledge and expertise. The menu is composed of modern French style pastries along with American flavors and local influences . Our pastry selection includes individual cakes and entremets, tarts, verrines, macarons, and a range of viennoiseries. Tartines – open faced sandwiches, a favorite during Belinda’s time in Paris, complement the pastries. The tartines are prepared on levain bread specially created by Michel for b. Patisserie.</p>
 
-		<aside>
-			<h3>Existing Reservations</h3>
+			<h2>Come Dine with Us</h2>
+			<h3>Hours</h3>
+			<p>8:00 am – 6:00 pm, daily</p>
+			<p>We are currently open/closed.</p>
+			<h2>reservations</h2>
+			<form>
+				<h3>Make a Reservation</h3>
+	    		<input type="text" placeholder="Name">
+	    		<div class="form-group">
+					<div class="dropdown">
+						<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Select A Day
+							<span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu reservation-day">
+							<li><a>Today</a></li>
+							<li><a>Tomorrow</a></li>
+							<li><a>The day after next</a></li>
+						</ul>
+					</div>
+				</div>
+    			<button type="submit">Confirm</button>
+			</form>
+			<h3>existing reservations</h3>
 			<table>
 				<thead>
 					<th>Name</th>
 					<th>Day</th>
 				</thead>
 				<tr>
-    				<td>Placeholder Name</td>
-    				<td>Placeholder Day</td> 
-  				</tr>
+	    			<td>Placeholder Name</td>
+	    			<td>Placeholder Day</td> 
+	  			</tr>
 				<tbody>
-					
+						
 				</tbody>
 			</table>
-		</aside>
+	</div>	
+
+	<div id="map">
+	</div>
+
 	</section>
 
-	<section>
-		<h2>Come Dine with Us</h2>
-		<div id="map"></div>
-	</section>
-
-	<section>
-		<h2>Customer Reviews</h2>
+	<!-- <section>
+		<h2>customer reviews</h2>
 		<img id="jerryImg" src="img/jerry.jpg" alt="jerry">
 		<div id="jerryQuote">
 			<p>“Big lettuce, big carrots, tomatoes like volleyballs.”</p>
 			<p>— Jerry Seinfeld, on The BIG Salad</p>
 		</div>
-	</section>
+	</section> -->
 
 	<footer>
-		<p>Monk's Cafe</p>
-		<p>2880 Broadway, New York, NY 10025</p> 
+		<p>b. patisserie</p>
+		<p>2821 California Street, San Francisco, CA 94118</p> 
 		<p>212.867.5309</p>
 	</footer>
 
 </body>
-
 <script src="js/jquery-3.2.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVubF6n38O6Y_FBURmAvfDFI1qAZSZU5Q&callback=initMap" async defer></script>
