--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 			<p>8:00 am – 6:00 pm, daily</p>
 			<p>We are currently open/closed.</p>
 			<h2>reservations</h2>
-			<form>
-				<h3>Make a Reservation</h3>
-	    		<input type="text" placeholder="Name">
+			<h3>Make a Reservation</h3>
+			<form class="form-inline reservation-form">
+				
+				<div class="form-group">
+				    <input type="text" class="form-control reservation-name" placeholder="Name">
+				</div>
 	    		<div class="form-group">
 					<div class="dropdown">
 						<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Select A Day
@@ -47,20 +50,15 @@
 						</ul>
 					</div>
 				</div>
-    			<button type="submit">Confirm</button>
+    			<button class="btn btn-default" type="submit">Confirm</button>
 			</form>
-			<h3>existing reservations</h3>
+			<h3>Existing Reservations</h3>
 			<table>
 				<thead>
 					<th>Name</th>
 					<th>Day</th>
 				</thead>
-				<tr>
-	    			<td>Placeholder Name</td>
-	    			<td>Placeholder Day</td> 
-	  			</tr>
-				<tbody>
-						
+				<tbody class="reservations">	
 				</tbody>
 			</table>
 	</div>	
@@ -82,14 +80,22 @@
 	<footer>
 		<p>b. patisserie</p>
 		<p>2821 California Street, San Francisco, CA 94118</p> 
-		<p>212.867.5309</p>
+		<p>415.867.5309</p>
 	</footer>
 
 </body>
+<script id="reservation-template" type="text/x-handlebars-template">
+	<tr data-id="{{reservationId}}">
+	    <td>{{name}}</td>
+	    <td>{{day}}</td> 
+	</tr>
+</script>
+<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVubF6n38O6Y_FBURmAvfDFI1qAZSZU5Q&callback=initMap" async defer></script>
+<script src="js/main.js"></script>
 
 </html>
