Js for open/closed; adding text for day selection

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Monk's Cafe</title>
+	<title>b. patisserie</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,900,900i" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/normalize.css">
@@ -30,7 +30,7 @@
 			<h2>Come Dine with Us</h2>
 			<h3>Hours</h3>
 			<p>8:00 am – 6:00 pm, daily</p>
-			<p>We are currently open/closed.</p>
+			<p id="hours"></p>
 			<h2>reservations</h2>
 			<h3>Make a Reservation</h3>
 			<form class="form-inline reservation-form">
@@ -51,6 +51,7 @@
 					</div>
 				</div>
     			<button class="btn btn-default" type="submit">Confirm</button>
+    			<p id="formConfirm"></p>
 			</form>
 			<h3>Existing Reservations</h3>
 			<table>
