Added Instagram images

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
 	<section>
 		<aside id="images">
-			<img src="img/olenka-kotyk-15382.jpg">
-			<img src="img/jennifer-pallian-173716.jpg">
+			<img src="img/olenka-kotyk-15382.jpg" alt="croissant">
+			<img src="img/kate-remmer-206795.jpg" alt="bread">
+			<img src="img/jennifer-pallian-173716.jpg" alt="pastry">
 		</aside>
 		<div id="content">
 			<h2>Our Story</h2>
@@ -62,9 +63,12 @@
 				<tbody class="reservations">	
 				</tbody>
 			</table>
+			<h2>the latest</h2>
+			<ul id="rudr_instafeed"></ul>
 	</div>	
 
 	<div id="map">
+
 	</div>
 
 	</section>
