Form validation fix; data not submitted without full fields

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<p id="hours"></p>
 			<h2>reservations</h2>
 			<h3>Make a Reservation</h3>
-			<form class="form-inline reservation-form" onsubmit="return formValidation()">
+			<form class="form-inline reservation-form">
 				
 				<div class="form-group">
 				    <input type="text" class="form-control reservation-name" placeholder="Name">
